--- a/client/travel/src/assets/components/FlightBookingPage/FlightBookingPage.css
+++ b/client/travel/src/assets/components/FlightBookingPage/FlightBookingPage.css
@@ -26,16 +26,16 @@ body {
   width: 100%;
   padding: 10px;
   margin-bottom: 15px;
-  border-radius: 8px;
+  border-radius: 5px;
   border: 1px solid #ddd;
 }
 
-.filter-button {
+.flight-page .filter-button {
   padding: 10px 15px;
   background-color: #001f54;
   color: #fff;
   border: none;
-  border-radius: 8px;
+  border-radius: 5px;
   margin-right: 10px;
   cursor: pointer;
 }
@@ -179,18 +179,16 @@ body {
   background-color: #f1f1f1;
 }
 
-.book-button {
+.flight-page .book-button {
   padding: 10px 20px;
-  background-color: #28a745;
+  background-color: #FDD017;
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
 }
 
-.book-button:hover {
-  background-color: #218838;
-}
+
 
 .pagination {
   display: flex;
