--- a/client/travel/src/assets/components/HeroSecVersion/HeroSecVersion.css
+++ b/client/travel/src/assets/components/HeroSecVersion/HeroSecVersion.css
@@ -108,3 +108,11 @@
     font-size: 3rem;
   }
 }
+
+@media screen and (max-width: 480px) {
+  .hero-section h1 {
+    font-size: 2.2rem;
+    margin: 15px;
+    margin-bottom: 60px;
+  }
+}
