--- a/client/travel/src/assets/components/PackagesSection/PackagesSection.css
+++ b/client/travel/src/assets/components/PackagesSection/PackagesSection.css
@@ -14,6 +14,11 @@
     font-family: 'Poppins', sans-serif;
     margin-bottom: 10px;
   }
+
+  .book-button{
+    background-color: #FDD017;
+    color: black;
+  }
   
   .section-header p {
     font-size: 1.2rem;
@@ -82,7 +87,7 @@
     margin-top: 30px;
   }
   
-  .custom-package-button button {
+  .packages-section .custom-package-button button {
     background-color: #001F54;
     color: white;
     font-size: 1rem;
