refactor styles and update API URL for SearchBar component

--- a/client/travel/src/assets/components/SearchBar/SearchBar.css
+++ b/client/travel/src/assets/components/SearchBar/SearchBar.css
@@ -220,7 +220,7 @@
     width: 100%; /* Ensure it fits within the screen */
     margin-bottom: 80px;
     margin-left: 20px;
-    margin-right: 20px;
+    margin-right: ;
     border-radius: 8px;
   }
 
