--- a/client/travel/src/assets/components/HeroSecVersion/HeroSecVersion.css
+++ b/client/travel/src/assets/components/HeroSecVersion/HeroSecVersion.css
@@ -111,8 +111,10 @@
 
 @media screen and (max-width: 480px) {
   .hero-section h1 {
-    font-size: 2.2rem;
+    font-size: 2.1rem;
+    font-weight: bolder;
     margin: 15px;
+    margin-top: 60px;
     margin-bottom: 60px;
   }
 }
