--- a/client/travel/src/assets/components/HeroSecVersion/HeroSecVersion.css
+++ b/client/travel/src/assets/components/HeroSecVersion/HeroSecVersion.css
@@ -112,6 +112,7 @@
 @media screen and (max-width: 480px) {
   .hero-section h1 {
     font-size: 2rem;
+    text-align: center;
     font-weight: bolder;
     margin: 15px;
     margin-top: 60px;
