refactor styles across multiple components for improved consistency and responsiveness

--- a/client/travel/src/assets/components/FlightDeals/FlightDeals.css
+++ b/client/travel/src/assets/components/FlightDeals/FlightDeals.css
@@ -6,7 +6,8 @@
 
 .flight-deals h2 {
   padding-top: 20px;
-  font-size: 2rem;
+  font-size: 3.5rem;
+  font-weight: bolder;
   color: #001F54;
   margin-bottom: 10px;
 }
