--- a/client/travel/src/assets/components/SearchBar/SearchBar.css
+++ b/client/travel/src/assets/components/SearchBar/SearchBar.css
@@ -6,7 +6,7 @@
   margin-bottom: 20px; /* Added margin-bottom */
   padding: 20px;
   background-color: rgba(255, 255, 255, 0.689); /* Transparent background with 50% opacity */
-  border-radius: 0; /* Set border-radius to 0 */
+  border-radius: 8px; /* Set border-radius to 0 */
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
@@ -44,7 +44,7 @@
 }
 
 .tabs button.active {
-  color: #fff; /* Navy Blue */
+  color: #000; /* Navy Blue */
   border-bottom-color: #ffcc00; /* Golden */
 }
 
@@ -71,7 +71,7 @@
   height: 50px; /* Fixed height */
   padding: 10px;
   border: 1px solid #ccc;
-  border-radius: 0; /* Set border-radius to 0 */
+  border-radius: 5px; /* Set border-radius to 0 */
   font-size: 14px;
   font-family: 'Poppins', sans-serif;
   color: #003366; /* Navy Blue text */
@@ -176,7 +176,7 @@
   background-color: #003366; /* Navy Blue */
   color: #ffcc00; /* Golden text */
   border: none;
-  border-radius: 0; /* Set border-radius to 0 */
+  border-radius: 5px; /* Set border-radius to 0 */
   font-weight: 600;
   font-size: 14px;
   font-family: 'Poppins', sans-serif;
