--- a/client/travel/src/assets/components/Contact/Contact.css
+++ b/client/travel/src/assets/components/Contact/Contact.css
@@ -1,13 +1,14 @@
 /* Contact Container */
 .contact-container {
-  padding: 40px 20px;
+  padding: 20px 20px;
   background-color: #f9f9f9;
   text-align: center;
+  margin-bottom: 20px;
 }
 
-.contact-heading {
-  font-size: 66px;
-  margin-bottom: 20px;
+.contact-container .contact-heading {
+  font-size: 3.5rem;
+  margin-bottom: 40px;
   color: #001f54;
   font-family: 'Poppins', sans-serif;
 }
@@ -19,11 +20,11 @@
   gap: 20px;
 }
 
-.contact-form {
+.contact-container .contact-form {
   background-color: #001f54;
-  width: 350px;
-  height: 400px;
-  border-radius: px;
+  width: 330px;
+  height: 365px;
+  border-radius: 5px;
   padding: 30px;
   display: flex;
   flex-direction: column;
@@ -35,7 +36,7 @@
   width: 100%;
   padding: 15px;
   border: none;
-  border-radius: px;
+  border-radius: 3px;
   margin-bottom: 15px;
   font-size: 1rem;
   color: #001f54;
@@ -53,7 +54,7 @@
   background-color: #FDD017;
   color: #001f54;
   border: none;
-  border-radius: 0px;
+  border-radius: 3px;
   font-size: 1.2rem;
   font-weight: bold;
   cursor: pointer;
@@ -70,10 +71,10 @@
   justify-content: center;
 }
 
-.map-container iframe {
+.contact-container .map-container iframe {
   border: 0;
   border-radius: 0px;
-  width: 350px;
+  width: 320px;
   max-width: 600px;
   height: 365px;
 }
