--- a/client/travel/src/assets/components/Destinations/Destinations.css
+++ b/client/travel/src/assets/components/Destinations/Destinations.css
@@ -12,11 +12,11 @@
 }
 
 /* Section Title */
-.section-title {
-  font-size: 66px;
+.destinations-container .section-title {
   padding-top: 40px;
-  font-weight: 650;
-  font-family: 'Poppins', sans-serif;
+  font-size: 3.5rem;
+  font-weight: bolder;
+  font-family: "Poppins", sans-serif;
   color: #001F54;
   margin-bottom: 40px;
 }
