--- a/client/travel/src/assets/components/Header/Header.css
+++ b/client/travel/src/assets/components/Header/Header.css
@@ -15,6 +15,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-bottom-right-radius: 25px;
+  border-bottom-left-radius: 25px;
   width: 100%;
   height: 100px;
   background-color: #ffffff;
