--- a/client/travel/src/assets/components/Testimonials/Testimonials.css
+++ b/client/travel/src/assets/components/Testimonials/Testimonials.css
@@ -1,14 +1,14 @@
 .testimonial-section {
   text-align: center;
-  padding: 50px 0;
+  padding: 40px 0;
   background-color: #fafafa;
   font-family: 'Poppins', sans-serif;
 }
 
 .testimonial-section h2 {
-  font-size: 2.5rem;
+  font-size: 3.5rem;
   margin-bottom: 40px;
-  color: #333;
+  color: #001F54;
 }
 
 .testimonial-slider {
@@ -29,9 +29,9 @@
 
 .testimonial-card {
   background-color: #fff;
-  border-radius: 0px;
+  border-radius: 5px;
   padding: 30px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.15);
   width: 300px;
   height: 400px;
   text-align: center;
