--- a/client/src/assets/components/WhatsAppButton/WhatsAppButton.css
+++ b/client/src/assets/components/WhatsAppButton/WhatsAppButton.css
@@ -1,7 +1,7 @@
 .whatsapp-button {
     position: fixed;
     bottom: 20px;
-    right: 20px;
+    left: 20px;
     background-color: white;
     border-radius: 50%;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -16,4 +16,24 @@
   
   .whatsapp-button:hover {
     background-color: #e0e0e0;
+  }
+  
+  /* Responsive styles */
+  @media (max-width: 768px) {
+    .whatsapp-button {
+      width: 50px;
+      height: 50px;
+      bottom: 15px;
+      left: 15px;
+    }
+  }
+  
+  @media (max-width: 480px) {
+    .whatsapp-button {
+        display: none;
+      width: 40px;
+      height: 40px;
+      bottom: 10px;
+      left: 10px;
+    }
   }
