--- a/client/src/assets/components/Contact/Contact.css
+++ b/client/src/assets/components/Contact/Contact.css
@@ -118,8 +118,8 @@
     height: fit-content;
   }
 
-  .contact-heading {
-    font-size: 40px; /* Reduced heading size for mobile */
+  .contact-container .contact-heading {
+    font-size: 2.5rem; /* Reduced heading size for mobile */
   }
 
   .contact-button {
