--- a/client/src/assets/components/Destinations/Destinations.css
+++ b/client/src/assets/components/Destinations/Destinations.css
@@ -119,8 +119,8 @@
 }
 
 @media (max-width: 480px) {
-  .section-title {
-    font-size: 24px;
+  .destinations-container .section-title {
+    font-size: 2.5rem;
   }
 
   .bento-image {
