--- a/client/src/assets/components/Testimonials/Testimonials.css
+++ b/client/src/assets/components/Testimonials/Testimonials.css
@@ -16,7 +16,7 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  max-width: 1000px;
+  max-width: 100;
   margin: 0 auto;
   overflow: hidden;
 }
@@ -29,19 +29,19 @@
 
 .testimonial-card {
   background-color: #fff;
-  border-radius: 5px;
+  border-radius: 8px;
   padding: 30px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.15);
   width: 300px;
-  height: 400px;
+  height: 350px;
   text-align: center;
   margin: 0 10px;
   flex-shrink: 0;
 }
 
 .testimonial-card img {
-  width: 80px;
-  height: 80px;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
   margin-bottom: 20px;
 }
@@ -54,7 +54,7 @@
 
 .testimonial-card .country {
   font-size: 1rem;
-  color: #777;
+  color: #001F54;
   margin-bottom: 15px;
 }
 
@@ -89,7 +89,7 @@
   }
 
   .testimonial-card {
-    width: 200px;
+    width: 250px;
     padding: 20px; /* Adjust padding for smaller screens */
     max-height: 300px;
   }
